Intro_to_Docker/ros2_ws/log/build_2023-01-17_19-06-29/hw1/stderr.log
  File "/root/ros2_ws/install/hw1/lib/python3.10/site-packages/hw1/subscriber_member_function.py", line 19
    self.get_logger().info('I heard: "%s" at %s' % (msg.data, time.now ())
                          ^
SyntaxError: '(' was never closed

